# StatisticalDistributionsLib

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  StatisticalDistributionsLib-config.cmake  StatisticalDistributionsLib.sln
StatisticalDistributionsLib/: Bernoulli.cpp  Bernoulli.h  Beta.cpp  Beta.h  BetaBinomial.cpp  BetaBinomial.h  Binomial.cpp  Binomial.h  ChiSquared.cpp  ChiSquared.h  Dirichlet.cpp  Dirichlet.h  Dirichlet.t  DirichletMultinomial.h  DirichletMultinomial.t  Distribution.h  Empirical.cpp  Empirical.h  Exponential.cpp  Exponential.h  Gamma.cpp  Gamma.h  GammaPoisson.cpp  GammaPoisson.h  Geometric.cpp  Geometric.h  JohnsonSb.cpp  JohnsonSb.h  JohnsonSl.cpp  JohnsonSl.h  JohnsonSu.cpp  JohnsonSu.h  KroneckerDelta.h  Lognormal.cpp  Lognormal.h  Makefile  Multinomial.cpp  Multinomial.h  Multinomial.t  NegBinomial.cpp  (+17 more)
StatisticalDistributionsLob/: Bernoulli.h  ChiSquared.cpp  ChiSquared.h  DirichletMultinomial.t  Gamma.h  GammaPoisson.cpp  GammaPoisson.h  JohnsonSu.cpp  JohnsonSu.h  Lognormal.h  Makefile  NegBinomial.cpp  NegBinomial.h  Poisson.h  ReadMe.txt  StatisticalDistribution.h  UniformDiscrete.cpp  Weibull.cpp
TestStatisticaDistributions/: Main.cpp
TestStatisticalDistributions/: Main.cpp  TestB.cpp  TestBernoulliBeta.cpp  TestCDE.cpp  TestGJ.cpp  TestLMN.cpp  TestPTUW.cpp  sbar.h
include/StatisticalDistributionsLib/: Bernoulli.h  Beta.h  BetaBinomial.h  Binomial.h  ChiSquared.h  Constant.h  DiracDelta.h  Dirichlet.h  Dirichlet.t  DirichletMultinomial.h  DirichletMultinomial.t  Empirical.h  Exponential.h  Gamma.h  GammaPoisson.h  GeneralStatDist.h  Geometric.h  JohnsonSb.h  JohnsonSl.h  JohnsonSu.h  KroneckerDelta.h  Lognormal.h  Makefile  Multinomial.h  Multinomial.t  NegBinomial.h  Normal.h  Poisson.h  StatisticalDistribution.h  Triangular.h  Uniform.h  UniformDiscrete.h  Weibull.h
src/: Bernoulli.cpp  Beta.cpp  BetaBinomial.cpp  Binomial.cpp  CMakeLists.txt  ChiSquared.cpp  Constant.cpp  Dirichlet.t  Empirical.cpp  Exponential.cpp  Gamma.cpp  GammaPoisson.cpp  Geometric.cpp  JohnsonSb.cpp  JohnsonSl.cpp  JohnsonSu.cpp  Lognormal.cpp  NegBinomial.cpp  Normal.cpp  Poisson.cpp  Triangular.cpp  Uniform.cpp  UniformDiscrete.cpp  Weibull.cpp  readme.txt
tests/: TestB.cpp  TestCDE.cpp  TestGJ.cpp  TestPRTUW.cpp
